Fixed background image not being stretched to the whole screen

--- a/MyOwn/CSS/style.css
+++ b/MyOwn/CSS/style.css
@@ -254,6 +254,7 @@ body{
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  width: 100%;
   display: table;
 }
 .myWebsites{
